JDK 21 upgrade - code cleanup (#167)
* #164 : Master to main changes + start on JDK21

* #164 : Maven - Bumped Lombok for JDK21

* Tweaked maven compiler settings for JDK21.
* Fixed Javadoc earnings in exchange adapters.

* #164 : Maven - Bumped to latest Boot 3.1.10 release

* #164 : Fix new Sonar whine

* #164 : Fix build

* #164 : Update maven build deps

* Also updated maven wrapper.
* Enforced maven 3.8+ and JDK21+

* #164 : Update CI config for JDK 21

* Also updated docs for JDK 17 -> JDK 21

* #164 : Update Docker base image for JDK 21

* #164 : Revert Gradle CI build to JDK 17

* Gradle deps need uplifting...

* #164 : Removed discontinued Coinbase Pro adapter

* See: https://www.coinbase.com/en-gb/blog/hello-advanced-trade-goodbye-coinbase-pro

* #164 : Updated Gradle deps for JDK 21

* Also bump to latest Boot patch version.
* Fix SpotBugs whine.

* #164 : Upgrade to Gradle 8.7 + ignore SpotBugs issue

* #164 : Fix deprecated use of URL constructor